# origincar

./: .bash_aliases  .bash_history  .bashrc  .gitignore  .python_history  .viminfo  .wget-hsts  INSTRUCTIONS.md  a.img  detail.md  projectrules.md  scratchpad.md  sudo nmcil device wifi rescan  sudo nmcli dev -- Wendy20050818  sudo nmcli dev wifi connect --  sudo nmcli dev wifi connect network-WangXinyue passwordWendy20050818  sudo nmcli device wifi rescan  sudo wifi connect WangXinyue Wendy20050818  sudo wifi_connect -- Wendy20050818  sudo wifi_connect WangXinyue Wendy20050818  sudo wifi_connect connect mi 12345678
config1/: origincar.list  origincar_config.json
config1/Rdkultra/: gestureDet_8x21.hbm
config1/efficient_det/: deleted_nodes_info.txt
dev_ws/: yolov5.config
dev_ws/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
dev_ws/install/line_follower_model/share/line_follower_model/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
dev_ws/src/controller/: package.xml  setup.py
dev_ws/src/controller/controller/: controller copy.py  controller.py
dev_ws/src/line_follower/: package.xml  setup.py
dev_ws/src/line_follower/line_follower/: baoli copy.py  baoli.py  compress.py  line_follower_714.py  line_follower_nn.py  line_follower_qrcode_nn copy 2.py  line_follower_qrcode_nn copy.py  line_follower_qrcode_nn.py  line_follower_qrcode_nn722.py  obstaric.py  (+14 more)
dev_ws/src/line_follower_model/: setup.py
testtest/: package.xml  setup.cfg  setup.py
testtest/install/: local_setup.sh  setup.sh
testtest/testtest/: test_sub.py
(+51 files in other folders)
